добавил пагинацию и фильтрацию у GetSongs
